tests/syntax_error/c_cast_uint32.jou
def foo() -> None:
    x = (uint32)123  # Error: Jou's cast syntax is 'value as uint32', not '(uint32)value'
